# stompforge

./: .gitignore  AGENTS.md  CHANGELOG.en.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.en.md  README.md  RELEASE_CHECKLIST.en.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_0.0.1-alpha.md  RELEASE_NOTES_0.0.2-alpha.en.md  RELEASE_NOTES_0.0.2-alpha.md  THIRD_PARTY_NOTICES.md
Assets/: stompforge-icon-source.ai
Packaging/: StompForge.iss
Source/: AssetRepository.cpp  AssetRepository.h  Effects.cpp  Effects.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Tests/: DspSmokeTest.cpp
cmake/: PlatformConfig.cmake
